iniciando dados para configurações

--- a/padrao.APP/src/app/modules/components/cadastrar-endereco/cadastrar-endereco.component.html
+++ b/padrao.APP/src/app/modules/components/cadastrar-endereco/cadastrar-endereco.component.html
@@ -1,11 +1,6 @@
-<form
-    [formGroup]="form"
->
+<form [formGroup]="form">
     <div class="flex flex-row items-center justify-center">
-        <mat-form-field
-            appearance="outline"
-            class="fuse-mat-no-subscript w-full mr-4 sm:w-35"
-        >
+        <mat-form-field class="fuse-mat-no-subscript w-full mr-4 sm:w-35">
             <mat-label>CEP</mat-label>
             <input
                 matInput
@@ -18,10 +13,7 @@
                 Campo obrigatório!
             </mat-error>
         </mat-form-field>
-        <mat-form-field
-            appearance="outline"
-            class="fuse-mat-no-subscript w-full mr-4 sm:w-35"
-        >
+        <mat-form-field class="fuse-mat-no-subscript w-full mr-4 sm:w-35">
             <mat-label>Logradouro</mat-label>
             <input
                 matInput
@@ -33,10 +25,7 @@
                 Campo obrigatório!
             </mat-error>
         </mat-form-field>
-        <mat-form-field
-            appearance="outline"
-            class="fuse-mat-no-subscript w-full sm:w-35"
-        >
+        <mat-form-field class="fuse-mat-no-subscript w-full sm:w-35">
             <mat-label>Nº</mat-label>
             <input
                 matInput
@@ -50,10 +39,7 @@
         </mat-form-field>
     </div>
     <div class="flex flex-row items-center justify-center">
-        <mat-form-field
-            appearance="outline"
-            class="fuse-mat-no-subscript w-full mr-4 sm:w-25"
-        >
+        <mat-form-field class="fuse-mat-no-subscript w-full mr-4 sm:w-25">
             <mat-label>Bairro</mat-label>
             <input
                 matInput
@@ -65,10 +51,7 @@
                 Campo obrigatório!
             </mat-error>
         </mat-form-field>
-        <mat-form-field
-            appearance="outline"
-            class="fuse-mat-no-subscript w-full mr-4 sm:w-25"
-        >
+        <mat-form-field class="fuse-mat-no-subscript w-full mr-4 sm:w-25">
             <mat-label>Cidade</mat-label>
             <input
                 matInput
@@ -80,10 +63,7 @@
                 Campo obrigatório!
             </mat-error>
         </mat-form-field>
-        <mat-form-field
-            appearance="outline"
-            class="fuse-mat-no-subscript w-full sm:w-25"
-        >
+        <mat-form-field class="fuse-mat-no-subscript w-full sm:w-25">
             <mat-label>UF</mat-label>
             <input
                 matInput
