atualizando dados da empresa

--- a/padrao.APP/src/app/modules/components/cadastrar-endereco/cadastrar-endereco.component.html
+++ b/padrao.APP/src/app/modules/components/cadastrar-endereco/cadastrar-endereco.component.html
@@ -6,6 +6,7 @@
                 matInput
                 [formControlName]="'cep'"
                 autocomplete="off"
+                (keydown)="this.buscarPorCep()"
                 required
                 mask="00000-000"
             />
