--- a/padrao.APP/src/app/modules/configuracoes/configuracoes.component.html
+++ b/padrao.APP/src/app/modules/configuracoes/configuracoes.component.html
@@ -16,7 +16,8 @@
                 <div
                     class="text-4xl font-extrabold tracking-tight leading-none"
                 >
-                    Configurações
+                    {{ getPanelInfo(selectedPanel).title }} <br />
+                    <span class="text-xs">Configurações</span>
                 </div>
                 <!-- Close button -->
                 <div class="lg:hidden">
@@ -71,7 +72,7 @@
         <!-- Drawer content -->
         <mat-drawer-content class="flex flex-col">
             <!-- Main -->
-            <div class="flex-auto px-6 pt-9 pb-12 md:p-8 md:pb-12 lg:p-12">
+            <div class="flex-auto px-6 pt-9 pb-12 md:p-8 md:pb-12 lg:p-5">
                 <!-- Panel header -->
                 <div class="flex items-center">
                     <!-- Drawer toggle -->
@@ -84,13 +85,6 @@
                             [svgIcon]="'heroicons_outline:menu'"
                         ></mat-icon>
                     </button>
-
-                    <!-- Panel title -->
-                    <div
-                        class="ml-2 lg:ml-0 text-3xl font-bold tracking-tight leading-none"
-                    >
-                        {{ getPanelInfo(selectedPanel).title }}
-                    </div>
                 </div>
 
                 <!-- Load settings panel -->
