--- a/padrao.APP/src/app/modules/configuracoes/empresa/empresa.component.html
+++ b/padrao.APP/src/app/modules/configuracoes/empresa/empresa.component.html
@@ -1,7 +1,7 @@
-<div class="w-full max-w-3xl">
+<div class="w-full">
     <!-- Form -->
     <form [formGroup]="form">
-        <div class="grid sm:grid-cols-4 gap-6 w-full mt-8">
+        <div class="grid sm:grid-cols-4 gap-6 w-full mt-8 h-corpo-empresa">
             <!-- Name -->
             <div class="sm:col-span-4">
                 <mat-form-field class="fuse-mat-no-subscript w-full">
@@ -58,13 +58,15 @@
                     />
                 </mat-form-field>
             </div>
-
             <div class="sm:col-span-4">
                 <app-cadastrar-endereco></app-cadastrar-endereco>
             </div>
+            <div class="sm:col-span-4" *ngIf="this.mostrarInsertImgem">
+                <app-inserir-imagem [imagem]="this.dados.imagem"></app-inserir-imagem>
+            </div>
         </div>
         <!-- Divider -->
-        <div class="mt-11 mb-10 border-t"></div>
+        <div class="mt-3 mb-3 border-t"></div>
 
         <!-- Actions -->
         <div class="flex items-center justify-end">
