--- a/padrao.APP/src/app/layout/layouts/vertical/dense/dense.component.html
+++ b/padrao.APP/src/app/layout/layouts/vertical/dense/dense.component.html
@@ -1,3 +1,6 @@
+<!-- Loading bar -->
+<fuse-loading-bar></fuse-loading-bar>
+
 <!-- Navigation -->
 <fuse-vertical-navigation
     class="dark bg-gray-900 print:hidden"
@@ -24,21 +27,7 @@
 <div class="flex flex-col flex-auto w-full min-w-0">
     <!-- Header -->
     <div
-        class="
-            relative
-            flex flex-0
-            items-center
-            w-full
-            h-16
-            px-4
-            md:px-6
-            z-49
-            shadow
-            dark:shadow-none dark:border-b
-            bg-card
-            dark:bg-transparent
-            print:hidden
-        "
+        class="relative flex flex-0 items-center w-full h-16 px-4 md:px-6 z-49 shadow dark:shadow-none dark:border-b bg-card dark:bg-transparent print:hidden"
     >
         <div class="flex items-center pr-2 space-x-2">
             <!-- Navigation toggle button -->
@@ -75,7 +64,7 @@
         <router-outlet *ngIf="true"></router-outlet>
     </div>
 
-    <!-- Footer -->
+    <!-- Footer 
     <div
         class="
             relative
@@ -96,8 +85,8 @@
         <span class="font-medium text-secondary"
             >Fuse &copy; {{ currentYear }}</span
         >
-    </div>
+    </div>-->
 </div>
 
-<!-- Quick chat -->
-<quick-chat #quickChat="quickChat"></quick-chat>
+<!-- Quick chat 
+<quick-chat #quickChat="quickChat"></quick-chat>-->
