--- a/padrao.APP/src/app/modules/configuracoes/empresa/inserir-imagem/inserir-imagem.component.html
+++ b/padrao.APP/src/app/modules/configuracoes/empresa/inserir-imagem/inserir-imagem.component.html
@@ -9,18 +9,19 @@
     />
 </form>
 <div class="flex flex-row flex-auto min-w-0">
-    <div class="container-anexar-file" (click)="this.abrirSelecionarArquivo()">
-        <span
-            id="selecionar"
-            *ngIf="!this.mostrarImg"
-            matTooltip="Clique para selecionar uma imagem"
+    <div
+        class="container-anexar-file"
+        (click)="this.abrirSelecionarArquivo()"
+        matTooltip="{{
+            !this.mostrarImg
+                ? 'Clique para selecionar uma imagem'
+                : 'Clique para trocar uma imagem'
+        }}"
+    >
+        <span id="selecionar" *ngIf="!this.mostrarImg"
             >Selecionar uma imagem</span
         >
-        <span
-            id="img"
-            *ngIf="this.mostrarImg"
-            matTooltip="Clique para trocar uma imagem"
-        >
+        <span id="img" *ngIf="this.mostrarImg">
             <img src="{{ this.base64 }}" class="no-img" />
         </span>
     </div>
