--- a/padrao.APP/src/app/modules/configuracoes/usuarios/usuarios.component.html
+++ b/padrao.APP/src/app/modules/configuracoes/usuarios/usuarios.component.html
@@ -74,6 +74,34 @@
                                 </td>
                             </ng-container>
 
+                            <ng-container matColumnDef="situacao">
+                                <th
+                                    mat-header-cell
+                                    mat-sort-header
+                                    *matHeaderCellDef
+                                >
+                                    Situação
+                                </th>
+                                <td mat-cell *matCellDef="let item">
+                                    <span
+                                        *ngIf="item.situacao"
+                                        class="inline-flex items-center font-bold text-xs px-2.5 py-0.5 rounded-full tracking-wide uppercase bg-green-200 text-green-800 dark:bg-green-600 dark:text-green-50"
+                                        ><span
+                                            class="leading-relaxed whitespace-nowrap"
+                                            >Ativo</span
+                                        ></span
+                                    >
+                                    <span
+                                        *ngIf="!item.situacao"
+                                        class="inline-flex items-center font-bold text-xs px-2.5 py-0.5 rounded-full tracking-wide uppercase bg-red-200 text-red-800 dark:bg-red-600 dark:text-red-50"
+                                        ><span
+                                            class="leading-relaxed whitespace-nowrap"
+                                            >Bloqueado</span
+                                        ></span
+                                    >
+                                </td>
+                            </ng-container>
+
                             <ng-container matColumnDef="dataCadastro">
                                 <th
                                     mat-header-cell
@@ -114,6 +142,35 @@
                                         >
                                             <mat-icon
                                                 svgIcon="heroicons_outline:key"
+                                            ></mat-icon>
+                                        </button>
+
+                                        <button
+                                            mat-icon-button
+                                            matTooltip="Editar acessos"
+                                            (click)="this.modalAlterar(item)"
+                                        >
+                                            <mat-icon
+                                                svgIcon="heroicons_outline:backspace"
+                                            ></mat-icon>
+                                        </button>
+                                        <button
+                                            mat-icon-button
+                                            matTooltip="{{
+                                                !item.situacao
+                                                    ? 'Ativar'
+                                                    : 'Bloquea'
+                                            }} usuário"
+                                            (click)="
+                                                this._atualizarSituacao(item)
+                                            "
+                                            *ngIf="
+                                                item.id !==
+                                                this.usuarioLogado.id
+                                            "
+                                        >
+                                            <mat-icon
+                                                svgIcon="heroicons_outline:switch-horizontal"
                                             ></mat-icon>
                                         </button>
                                     </span>
