--- a/padrao.APP/src/app/modules/clientes/clientes.component.html
+++ b/padrao.APP/src/app/modules/clientes/clientes.component.html
@@ -1,183 +1,1 @@
-<div class="flex flex-col flex-auto min-w-0">
-    <!-- Main -->
-    <div class="flex-auto p-6 sm:p-10">
-        <!-- CONTENT GOES HERE -->
-        <div class="h-full min-h-full max-h-full rounded-2xl">
-            <div class="grid grid-cols-1 gap-8 w-full">
-                <!-- Recent transactions table -->
-                <div
-                    class="xl:col-span-2 flex flex-col flex-auto bg-card shadow rounded-2xl overflow-hidden"
-                >
-                    <div class="p-6">
-                        <div class="flex items-center justify-between">
-                            <div class="flex flex-col">
-                                <div
-                                    class="mr-4 text-lg font-medium tracking-tight leading-6 truncate"
-                                >
-                                    Clientes
-                                </div>
-                            </div>
-                            <div class="ml-2">
-                                <div
-                                    class="mr-4 text-lg font-medium tracking-tight leading-6 truncate"
-                                >
-                                    <button
-                                        class="sm:inline-flex ml-3"
-                                        mat-flat-button
-                                        [color]="'primary'"
-                                        (click)="this.modalNovo()"
-                                    >
-                                        <mat-icon
-                                            class="icon-size-5"
-                                            [svgIcon]="'heroicons_solid:plus'"
-                                        ></mat-icon>
-                                        <span class="ml-2">Adicionar</span>
-                                    </button>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="overflow-x-auto mx-6">
-                        <table
-                            class="w-full bg-transparent"
-                            mat-table
-                            matSort
-                            [dataSource]="this.tabelaDados"
-                            [trackBy]="this.trackByFn"
-                            #recentTransactionsTable
-                        >
-                            <ng-container matColumnDef="nome">
-                                <th
-                                    mat-header-cell
-                                    mat-sort-header
-                                    *matHeaderCellDef
-                                >
-                                    Nome
-                                </th>
-                                <td mat-cell *matCellDef="let item">
-                                    <span class="pr-6 whitespace-nowrap">
-                                        {{ item.nome }}
-                                    </span>
-                                </td>
-                            </ng-container>
-
-                            <ng-container matColumnDef="cpf">
-                                <th
-                                    mat-header-cell
-                                    mat-sort-header
-                                    *matHeaderCellDef
-                                >
-                                    CPF
-                                </th>
-                                <td mat-cell *matCellDef="let item">
-                                    <span class="pr-6 whitespace-nowrap">
-                                        {{ item.cpf | mask: "000.000.000-00" }}
-                                    </span>
-                                </td>
-                            </ng-container>
-
-                            <ng-container matColumnDef="telefone">
-                                <th
-                                    mat-header-cell
-                                    mat-sort-header
-                                    *matHeaderCellDef
-                                >
-                                    Telefone
-                                </th>
-                                <td mat-cell *matCellDef="let item">
-                                    <span class="pr-6 whitespace-nowrap">
-                                        {{
-                                            item.telefone
-                                                | mask: "(00) 0 0000-0000||(00) 0000-0000"
-                                        }}
-                                    </span>
-                                </td>
-                            </ng-container>
-
-                            <ng-container matColumnDef="celular">
-                                <th
-                                    mat-header-cell
-                                    mat-sort-header
-                                    *matHeaderCellDef
-                                >
-                                    Celular
-                                </th>
-                                <td mat-cell *matCellDef="let item">
-                                    <span class="pr-6 whitespace-nowrap">
-                                        {{
-                                            item.celular
-                                                | mask: "(00) 0 0000-0000||(00) 0000-0000"
-                                        }}
-                                    </span>
-                                </td>
-                            </ng-container>
-
-                            <!-- ações -->
-                            <ng-container matColumnDef="acoes">
-                                <th
-                                    mat-header-cell
-                                    mat-sort-header
-                                    *matHeaderCellDef
-                                ></th>
-                                <td mat-cell *matCellDef="let item">
-                                    <span
-                                        class="pr-6 font-medium whitespace-nowrap"
-                                    >
-                                        <button
-                                            mat-icon-button
-                                            matTooltip="Editar"
-                                            (click)="this.modalAlterar(item)"
-                                        >
-                                            <mat-icon
-                                                svgIcon="heroicons_outline:pencil"
-                                            ></mat-icon>
-                                        </button>
-                                    </span>
-                                </td>
-                            </ng-container>
-
-                            <!-- Footer -->
-                            <ng-container
-                                matColumnDef="recentOrdersTableFooter"
-                            >
-                                <td
-                                    class="py-6 px-0 border-0 text-center"
-                                    mat-footer-cell
-                                    *matFooterCellDef
-                                    colspan="6"
-                                >
-                                    <span *ngIf="!this.temRegistro"
-                                        >Nenhum resultado!</span
-                                    >
-                                </td>
-                            </ng-container>
-
-                            <tr
-                                mat-header-row
-                                *matHeaderRowDef="tabelaColunas"
-                            ></tr>
-                            <tr
-                                class="order-row h-16"
-                                mat-row
-                                *matRowDef="let row; columns: tabelaColunas"
-                            ></tr>
-                            <tr
-                                class="h-16 border-0"
-                                mat-footer-row
-                                *matFooterRowDef="['recentOrdersTableFooter']"
-                            ></tr>
-                        </table>
-                        <div
-                            class="text-center mb-5"
-                            *ngIf="this.podeCarregarMais"
-                        >
-                            <p class="pointer" (click)="this.carregarMais()">
-                                Carregar mais
-                            </p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
+<router-outlet></router-outlet>
