--- a/padrao.APP/src/app/modules/components/cadastrar-endereco/cadastrar-endereco.component.html
+++ b/padrao.APP/src/app/modules/components/cadastrar-endereco/cadastrar-endereco.component.html
@@ -7,6 +7,7 @@
                 [formControlName]="'cep'"
                 autocomplete="off"
                 (keydown)="this.buscarPorCep()"
+                (blur)="this.buscarPorCep()"
                 required
                 mask="00000-000"
             />
