--- a/padrao.APP/src/app/modules/clientes/lista-contatos/lista-contatos.component.html
+++ b/padrao.APP/src/app/modules/clientes/lista-contatos/lista-contatos.component.html
@@ -56,7 +56,7 @@
                         <button
                             class="ml-4"
                             mat-flat-button
-                            [color]="'primary'"
+                            [color]="'accent'"
                             (click)="pesquisarNome()"
                             matTooltip="Pesquisar"
                         >
