--- a/padrao.APP/src/app/modules/clientes/detalhe-cliente/detalhe-cliente.component.html
+++ b/padrao.APP/src/app/modules/clientes/detalhe-cliente/detalhe-cliente.component.html
@@ -1,3 +1,252 @@
-<div class="flex flex-col w-full">
-    <p>detalhe-cliente works!</p>
+<div class="flex flex-col w-full" *ngIf="this.mostrar">
+    <div
+        class="relative flex flex-col flex-auto items-center p-6 pt-0 sm:p-12 sm:pt-0"
+    >
+        <div class="w-full max-w-3xl">
+            <div class="flex flex-wrap justify-between">
+                <div class="mt-3 text-4xl font-bold truncate">
+                    {{ cliente.nome }}
+                </div>
+                <div class="mt-3">
+                    <button
+                        mat-stroked-button
+                        (click)="modalAlterar()"
+                        class="mr-2"
+                    >
+                        <mat-icon
+                            class="icon-size-5"
+                            [svgIcon]="'heroicons_solid:pencil-alt'"
+                        ></mat-icon>
+                        <span class="ml-2">Editar</span>
+                    </button>
+                    <button
+                        mat-icon-button
+                        [matTooltip]="'Fechar'"
+                        [routerLink]="['../']"
+                    >
+                        <mat-icon [svgIcon]="'heroicons_outline:x'"></mat-icon>
+                    </button>
+                </div>
+            </div>
+
+            <div class="min-w-0" *ngIf="this.idade">
+                <div class="font-medium leading-5 truncate">
+                    Idade: <b>{{ this.idade }}</b>
+                </div>
+            </div>
+
+            <ng-container>
+                <div class="flex flex-wrap items-center mt-2">
+                    <ng-container>
+                        <div
+                            class="flex items-center justify-center py-1 px-3 mr-3 mb-3 rounded-full leading-normal text-gray-500 bg-gray-100 dark:text-gray-300 dark:bg-gray-700"
+                        >
+                            <span class="text-sm font-medium whitespace-nowrap">
+                                Quantidade de viagem: <b>0</b></span
+                            >
+                        </div>
+                    </ng-container>
+                    <ng-container>
+                        <div
+                            class="flex items-center justify-center py-1 px-3 mr-3 mb-3 leading-normal text-gray-500 dark:text-gray-300"
+                        >
+                            <mat-icon matTooltip="Imprimir ficha do cliente" svgIcon="heroicons_outline:printer"></mat-icon>
+                        </div>
+                    </ng-container>
+                </div>
+            </ng-container>
+
+            <div class="flex flex-col mt-4 pt-6 border-t">
+                <div
+                    class="flex"
+                    *ngIf="cliente.dataNascimento"
+                    matTooltip="Data nascimento"
+                >
+                    <mat-icon [svgIcon]="'heroicons_outline:cake'"></mat-icon>
+                    <div class="min-w-0 ml-3 space-y-1">
+                        <ng-container>
+                            <div class="flex items-center leading-6">
+                                <div class="sm:ml-3 font-mono">
+                                    <b>
+                                        {{
+                                            cliente.dataNascimento
+                                                | date: "dd/MM/yyyy"
+                                        }}</b
+                                    >
+                                </div>
+                            </div>
+                        </ng-container>
+                    </div>
+                </div>
+                <div
+                    class="flex"
+                    *ngIf="cliente.cpf"
+                    matTooltip="CPF / Org. Emissor / RG"
+                >
+                    <mat-icon
+                        [svgIcon]="'heroicons_outline:finger-print'"
+                    ></mat-icon>
+                    <div class="min-w-0 ml-3 space-y-1">
+                        <ng-container>
+                            <div class="flex items-center leading-6">
+                                <div class="sm:ml-3 font-mono">
+                                    <b>
+                                        {{
+                                            cliente.cpf | mask: "000.000.000-00"
+                                        }}
+                                    </b>
+                                    <b *ngIf="cliente.orgEmissor" class="ml-2">
+                                        / {{ cliente.orgEmissor }}</b
+                                    >
+                                    <b *ngIf="cliente.rg" class="ml-2">
+                                        / {{ cliente.rg }}</b
+                                    >
+                                </div>
+                            </div>
+                        </ng-container>
+                    </div>
+                </div>
+                <div
+                    class="flex"
+                    *ngIf="cliente.telefone || cliente.celular"
+                    matTooltip="Telefones"
+                >
+                    <mat-icon [svgIcon]="'heroicons_outline:phone'"></mat-icon>
+                    <div class="min-w-0 ml-3 space-y-1">
+                        <ng-container>
+                            <div class="flex items-center leading-6">
+                                <div class="sm:ml-3 font-mono">
+                                    <b>{{
+                                        cliente.telefone
+                                            | mask
+                                                : "(00) 0 0000-0000||(00) 0000-0000"
+                                    }}</b>
+                                </div>
+                                <div class="sm:ml-3 font-mono">
+                                    <b>{{
+                                        cliente.celular
+                                            | mask
+                                                : "(00) 0 0000-0000||(00) 0000-0000"
+                                    }}</b>
+                                </div>
+                            </div>
+                        </ng-container>
+                    </div>
+                </div>
+                <div
+                    class="flex"
+                    *ngIf="cliente.enderecoId"
+                    matTooltip="Endereço"
+                >
+                    <mat-icon
+                        [svgIcon]="'heroicons_outline:location-marker'"
+                    ></mat-icon>
+                    <div class="min-w-0 ml-3 space-y-1">
+                        <ng-container>
+                            <div class="flex items-center leading-6">
+                                <div class="sm:ml-3 font-mono">
+                                    <b *ngIf="cliente.endereco.logradouro">{{
+                                        cliente.endereco.logradouro
+                                    }}</b>
+                                    <b *ngIf="cliente.endereco.numero"
+                                        >, {{ cliente.endereco.numero }}</b
+                                    >
+                                    <b *ngIf="cliente.endereco.bairro"
+                                        >, {{ cliente.endereco.bairro }}</b
+                                    >
+                                    <b *ngIf="cliente.endereco.cidade"
+                                        >, {{ cliente.endereco.cidade }}</b
+                                    >
+                                    <b *ngIf="cliente.endereco.uf"
+                                        >/{{ cliente.endereco.uf }}</b
+                                    >
+                                </div>
+                            </div>
+                        </ng-container>
+                    </div>
+                </div>
+            </div>
+            <!--VIAGENS-->
+            <div class="flex flex-col mt-4 pt-6 border-t">
+                <ng-container *ngIf="this.viagens; else loading">
+                    <ng-container *ngIf="this.viagens.length; else noActivity">
+                        <h3 class="text-center font-bold">Viagens</h3>
+                        <div class="mt-1">
+                            <ol>
+                                <!-- Activities -->
+                                <ng-container
+                                    *ngFor="
+                                        let activity of this.viagens;
+                                        let i = index;
+                                        let first = first;
+                                        let last = last;
+                                        trackBy: trackByFn
+                                    "
+                                >
+                                    <!-- Activity -->
+                                    <li class="relative flex py-7">
+                                        <!-- Line -->
+                                        <ng-container>
+                                            <div class="absolute top-7 left-5 w-0.5 h-full -ml-px bg-gray-300 dark:bg-gray-600"></div>
+                                        </ng-container>
+
+                                        <div class="relative flex flex-auto">
+                                            <!-- Icon -->
+                                            <ng-container>
+                                                <div
+                                                    class="flex flex-shrink-0 items-center justify-center w-10 h-10 mr-4 rounded-full bg-gray-400"
+                                                >
+                                                    <mat-icon
+                                                        class="icon-size-5 text-white"
+                                                        [svgIcon]="
+                                                            'mat_outline:travel_explore'
+                                                        "
+                                                    >
+                                                    </mat-icon>
+                                                </div>
+                                            </ng-container>
+
+                                            <!-- Content -->
+                                            <div
+                                                class="flex flex-col flex-auto items-start"
+                                            >
+                                                <!-- Description -->
+                                                <ng-container>
+                                                    <div>Tororomba</div>
+                                                </ng-container>
+                                                <div
+                                                    class="flex flex-col sm:flex-row sm:items-center mt-2 sm:mt-1 sm:space-x-2 text-md leading-5"
+                                                >
+                                                    <!-- Date -->
+                                                    <div class="text-secondary">
+                                                        20/05/2022 05:00
+                                                    </div>
+                                                </div>
+                                                <!-- Extra content -->
+                                                <ng-container>
+                                                    <div
+                                                        class="mt-4 py-4 px-5 rounded-lg bg-gray-200 dark:bg-gray-800"
+                                                    >
+                                                        Teste
+                                                    </div>
+                                                </ng-container>
+                                            </div>
+                                        </div>
+                                    </li>
+                                </ng-container>
+                            </ol>
+                        </div>
+                    </ng-container>
+                </ng-container>
+
+                <!-- Loading template -->
+                <ng-template #loading> Carregando viagens... </ng-template>
+
+                <!-- No Activity template -->
+                <ng-template #noActivity>
+                    Nenhuma viagem encontrada.
+                </ng-template>
+            </div>
+        </div>
+    </div>
 </div>
