--- a/padrao.APP/src/styles/styles.scss
+++ b/padrao.APP/src/styles/styles.scss
@@ -25,3 +25,9 @@
     text-align: center !important;
     font-weight: 500 !important;
 }
+
+.clique-add {
+    color: #4f46e5;
+    cursor: pointer;
+    font-size: 20px;
+}
