--- a/padrao.APP/src/app/modules/onibus/onibus.component.html
+++ b/padrao.APP/src/app/modules/onibus/onibus.component.html
@@ -1,21 +1,6 @@
 <div class="absolute inset-0 flex flex-col min-w-0 overflow-hidden">
-    <mat-drawer-container
-        class="flex-auto h-full bg-card dark:bg-transparent"
-        (backdropClick)="onBackdropClicked()"
-    >
-        <!-- Drawer -->
-        <mat-drawer
-            class="w-full md:w-160 dark:bg-gray-900"
-            [mode]="drawerMode"
-            [opened]="false"
-            [position]="'end'"
-            [disableClose]="true"
-            #matDrawer
-        >
-            <router-outlet></router-outlet>
-        </mat-drawer>
-
-        <mat-drawer-content class="flex flex-col">
+    <div class="flex-auto h-full bg-card dark:bg-transparent">
+        <div class="flex flex-col">
             <!-- Main -->
             <div class="flex-auto">
                 <!-- Header -->
@@ -27,12 +12,12 @@
                         <div
                             class="text-4xl font-extrabold tracking-tight leading-none"
                         >
-                            Clientes
+                            Ônibus/Carros
                         </div>
                     </div>
 
                     <!-- Main actions -->
-                    <div class="flex flex-wrap items-center mt-4 sm:mt-0 md:mt-4">
+                    <div class="flex items-center mt-4 sm:mt-0 md:mt-4">
                         <!-- Search -->
                         <div class="flex-auto">
                             <mat-form-field
@@ -46,13 +31,13 @@
                                 <input
                                     matInput
                                     [autocomplete]="'off'"
-                                    [placeholder]="'Pesquisar por cliente'"
+                                    [placeholder]="'Pesquisar por carro'"
                                     [formControl]="inputPesquisar"
                                     (keydown.enter)="pesquisarNome()"
                                 />
                             </mat-form-field>
                         </div>
-                        <!-- Buscar cliente button -->
+                        <!-- Buscar carro button -->
                         <button
                             class="ml-4"
                             mat-flat-button
@@ -64,14 +49,13 @@
                                 [svgIcon]="'heroicons_outline:search'"
                             ></mat-icon>
                         </button>
-                        <!-- Add cliente button -->
+                        <!-- Add carro button -->
                         <button
                             class="ml-4"
                             mat-flat-button
                             [color]="'primary'"
                             (click)="modalNovo()"
-                            matTooltip="Adicionar cliente"
-                            class="mt-2 sm:mt-0 md:mt-0 sm:ml-2 md:ml-2"
+                            matTooltip="Adicionar Carro"
                         >
                             <mat-icon
                                 [svgIcon]="'heroicons_outline:plus'"
@@ -81,15 +65,13 @@
                     </div>
                 </div>
 
-                <!-- clientes list -->
+                <!-- carros list -->
                 <div class="relative">
                     <ng-container *ngIf="this.dados; else noCarregando">
-                        <ng-container
-                            *ngIf="this.dados.length; else noclientes"
-                        >
+                        <ng-container *ngIf="this.dados.length; else noDados">
                             <ng-container
                                 *ngFor="
-                                    let cliente of this.dados;
+                                    let carro of this.dados;
                                     let i = index;
                                     trackBy: trackByFn
                                 "
@@ -98,30 +80,30 @@
                                 <ng-container
                                     *ngIf="
                                         i === 0 ||
-                                        cliente.nome.charAt(0) !==
+                                        carro.nome.charAt(0) !==
                                             this.dados[i - 1].nome.charAt(0)
                                     "
                                 >
                                     <div
                                         class="z-10 sticky top-0 -mt-px px-6 py-1 md:px-8 border-t border-b font-medium uppercase text-secondary bg-gray-50 dark:bg-gray-900"
                                     >
-                                        {{ cliente.nome.charAt(0) }}
+                                        {{ carro.nome.charAt(0) }}
                                     </div>
                                 </ng-container>
-                                <!-- cliente -->
+                                <!-- carro -->
                                 <a
                                     class="z-20 flex items-center px-6 py-4 md:px-8 cursor-pointer border-b"
                                     [ngClass]="{
                                         'hover:bg-gray-100 dark:hover:bg-hover':
-                                            !clienteSelecionado ||
-                                            clienteSelecionado.codigo !==
-                                                cliente.codigo,
+                                            !carroselecionado ||
+                                            carroselecionado.codigo !==
+                                                carro.codigo,
                                         'bg-primary-50 dark:bg-hover':
-                                            clienteSelecionado &&
-                                            clienteSelecionado.codigo ===
-                                                cliente.codigo
+                                            carroselecionado &&
+                                            carroselecionado.codigo ===
+                                                carro.codigo
                                     }"
-                                    [routerLink]="['./', cliente.codigo]"
+                                    (click)="this.modalAlterar(carro)"
                                 >
                                     <div
                                         class="flex flex-0 items-center justify-center w-10 h-10 rounded-full overflow-hidden"
@@ -130,7 +112,7 @@
                                             <div
                                                 class="flex items-center justify-center w-full h-full rounded-full text-lg uppercase bg-gray-200 text-gray-600 dark:bg-gray-700 dark:text-gray-200"
                                             >
-                                                {{ cliente.nome.charAt(0) }}
+                                                {{ carro.nome.charAt(0) }}
                                             </div>
                                         </ng-container>
                                     </div>
@@ -138,40 +120,18 @@
                                         <div
                                             class="font-medium leading-5 truncate"
                                         >
-                                            {{ cliente.nome }}
+                                            {{ carro.nome }}
                                         </div>
                                         <div
                                             class="leading-5 truncate text-secondary"
                                         >
-                                            <span *ngIf="cliente.cpf">
-                                                CPF:
-                                                <b>
-                                                    {{
-                                                        cliente.cpf
-                                                            | mask
-                                                                : "000.000.000-00"
-                                                    }}</b
-                                                >
+                                            <span *ngIf="carro.placa">
+                                                Placa:
+                                                <b> {{ carro.placa }}</b>
                                             </span>
-                                            <span *ngIf="cliente.celular">
-                                                Celular:
-                                                <b>
-                                                    {{
-                                                        cliente.celular
-                                                            | mask
-                                                                : "(00) 0 0000-0000||(00) 0000-0000"
-                                                    }}</b
-                                                >
-                                            </span>
-                                            <span *ngIf="cliente.telefone">
-                                                Telefone:
-                                                <b>
-                                                    {{
-                                                        cliente.telefone
-                                                            | mask
-                                                                : "(00) 0 0000-0000||(00) 0000-0000"
-                                                    }}</b
-                                                >
+                                            <span *ngIf="carro.marca">
+                                                Marca:
+                                                <b> {{ carro.marca }}</b>
                                             </span>
                                         </div>
                                     </div>
@@ -179,7 +139,7 @@
                             </ng-container>
                             <ng-container *ngIf="this.podeCarregarMais">
                                 <div
-                                    class="p-8 sm:p-16 border-t clique-add-cliente font-semibold tracking-tight text-center"
+                                    class="p-8 sm:p-16 border-t clique-add font-semibold tracking-tight text-center"
                                     (click)="this.carregarMais()"
                                 >
                                     Carregar mais
@@ -188,16 +148,13 @@
                         </ng-container>
                     </ng-container>
 
-                    <!-- No clientes -->
-                    <ng-template #noclientes>
+                    <!-- No carros -->
+                    <ng-template #noDados>
                         <div
                             class="p-8 sm:p-16 border-t text-4xl font-semibold tracking-tight text-center"
                         >
-                            Nenhum cliente encontrado <br />
-                            <a
-                                (click)="this.modalNovo()"
-                                class="clique-add-cliente"
-                            >
+                            Nenhum carro encontrado <br />
+                            <a (click)="this.modalNovo()" class="clique-add">
                                 Clique aqui para cadastrar</a
                             >
                         </div>
@@ -212,6 +169,6 @@
                     </ng-template>
                 </div>
             </div>
-        </mat-drawer-content>
-    </mat-drawer-container>
+        </div>
+    </div>
 </div>
