front cadastrando excursão

--- a/padrao.APP/src/app/modules/excursoes/cadastrar-excursao/cadastrar-excursao.component.scss
+++ b/padrao.APP/src/app/modules/excursoes/cadastrar-excursao/cadastrar-excursao.component.scss
@@ -1,3 +1,29 @@
-.w-10-p {
-    width: 10%;
+.w-15-p {
+    width: 15%;
 }
+
+.motoristaOnibus {
+    table {
+        font-family: arial, sans-serif;
+        border-collapse: collapse;
+        width: 100%;
+      }
+      
+      td, th {
+        border: 1px solid #dddddd;
+        text-align: left;
+        padding: 8px;
+      }
+      
+      tr:nth-child(even) {
+        background-color: #dddddd;
+      }
+}
+
+@media only screen and (max-width: 600px) {
+    .w-15-p {
+        width: 100%;
+    }
+  }
+
+
