iniciando front contrato viagem config

--- a/padrao.APP/src/app/modules/configuracoes/configuracoes.component.html
+++ b/padrao.APP/src/app/modules/configuracoes/configuracoes.component.html
@@ -102,6 +102,9 @@
                         <ng-container *ngSwitchCase="'empresa'">
                             <app-empresa></app-empresa>
                         </ng-container>
+                        <ng-container *ngSwitchCase="'contrato'">
+                            <app-contrato-viagem></app-contrato-viagem>
+                        </ng-container>
                     </ng-container>
                 </div>
             </div>
